prevent invitation names from overlapping

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -307,7 +307,7 @@ body
   #followers ul li
     &.follower, &.player
       float: left
-      width: 75px
+      width: 105px
       font-size: 0.8em
       font-weight: bold
       margin-bottom: 10px
